--- a/deploy/deb/changelog
+++ b/deploy/deb/changelog
@@ -1,5 +1,5 @@
-oxicrab (0.11.2) unstable; urgency=low
+oxicrab (0.11.3) unstable; urgency=low
 
   * See CHANGELOG.md for detailed release notes
 
- -- James Turnbull <james@ltl.so>  Sat, 21 Feb 2026 00:00:00 +0000
+ -- James Turnbull <james@ltl.so>  Sun, 22 Feb 2026 03:31:25 -0500
